--- a/styles/style.css
+++ b/styles/style.css
@@ -48,3 +48,68 @@ h1:hover {
     text-align: center;
 
 }
+
+#third-container{
+    background-image: url("../images/image-3.jpg"); 
+    background-color: rgb(0, 195, 255);
+    margin: 50px;
+    padding: 20px 20px 100px 20px;
+    border: 2px solid rgb(0, 195, 255);
+    border-radius: 100px;
+    box-shadow: 1px 1px 10px;
+}
+
+.buttons{
+  margin-left: 500px;
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+}
+
+#reset, #erase, #change-grid-size{
+    outline: none;
+    height: 30px;
+    border: 1px solid rgb(0, 195, 255);
+    border-radius: 5px;
+    background-color: rgb(0, 195, 255);
+    color:white;
+    box-shadow: 1px 1px 10px;
+}
+
+#erase{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+#reset:hover, #erase:hover, #change-grid-size:hover{
+    box-shadow: 1px 1px 5px;
+    border: 1px solid rgb(0, 195, 255);
+    background-color: white;
+    color: rgb(0, 195, 255);
+}
+
+#subcontainer-3-2{
+    margin: 100px 200px;
+    border: 3px solid rgb(0, 195, 255);
+    border-radius: 10px;
+}
+
+div > .rows{
+    margin-top: 0;
+}
+
+.rows {
+    display: flex;
+    flex-direction: row;
+    flex: 10;
+}
+
+.squares {
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    /* border: 1px solid rgb(0, 195, 255); */
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+}
