--- a/styles/style.css
+++ b/styles/style.css
@@ -113,3 +113,26 @@ div > .rows{
     flex-direction: row;
     flex: 1;
 }
+
+#fourth-container{
+    margin-top: 14px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    padding: 10px;
+    background-color: rgb(0, 195, 255);
+
+}
+
+i, #year-author{
+    display: inline-block;
+    position: relative;
+    left: 500px;
+    color: white;
+    font-size: 15px;
+}
+
+#year-author{
+    position: relative;
+    top: -6px;
+}
