--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,9 @@ html{
 }
 
 body {
+    position: relative;
+    min-height: 100vh;   /*100% viewport height (vh)*/
+    padding-bottom: 47px;
     margin: 0;
     padding: 0;
     background-color: white;
@@ -115,13 +118,13 @@ div > .rows{
 }
 
 #fourth-container{
-    margin-top: 14px;
-    margin-left: 0;
-    margin-right: 0;
-    margin-bottom: 0;
+    margin: 14px 0 0 0;
     padding: 10px;
     background-color: rgb(0, 195, 255);
-
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 i, #year-author{
